Adding full CRUDability to the Users model

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,15 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<h2><%= @user.username %></h2>
+<h2><%= @user.fname %></h2>
+<h2><%= @user.lname %></h2>
+
+<p>In my years, I've seen all sounds of misconception.. When I wake up I like a pound of bacon. Come'on shout it out. But I'm okay just pain me. Will break down what little is left, yeah. Take it very slow. So when you hold onto the past then you. What happened to me I don't understand.. It's what we live for. Rock, It's what we're all about. Hustling deals like Mickey Macoote. Every hit hurts like your kiss. It's not what I said but intentions you've read.. Start off the day with my arteries shaking. She said, you don't even know</p>
+
+<% @user.posts.each do |b| %>
+<!-- -->
+<%= b.title %>
+<%= b.body %>
+<% end %>
+
+
+<%= link_to "Edit", edit_user_path(@user) %>
+<%= link_to "Posts", post_path(@user) %>
