--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+		<nav>
+			<ul>
+				<li><%= link_to "Sign up!", new_user_path %></li>
+				<li><%= link_to "Users", users_path %></li>
+				<li><%= link_to "Posts", posts_path %></li>
+			</ul>
+		</nav>
+	<%= flash[:notice] if flash[:notice] %>
+	<%= flash[:alert] if flash[:alert] %>
 <%= yield %>
-
 </body>
 </html>
