--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<h1>All of the Posts</h1>
+<% @posts.each do |post| %>
+    <%= link_to post.title, post_path(post.id) %><br>
+<% end %>
