--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,4 @@
-<h1>Posts#show</h1>
-<p>Find me in app/views/posts/show.html.erb</p>
+
+<%= link_to "#{@post.user.username}", users_path(@user) %>
+<%= @post.title %>
+<%= @post.body %>
