--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<h1>All of the Users</h1>
+<% @users.each do |user| %>
+    <%= link_to user.username, user_path(user) %><br>
+<% end %>
