Adding sign in functionality

--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Comments#show</h1>
-<p>Find me in app/views/comments/show.html.erb</p>
+	<div id="comments">
+			<h6>Comments</h6>
+			<%= @comments.each do |c| %>
+			<br>
+			<%= c.body %>
+			<% end %>
+	</div>
