--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,28 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#about  {
+	display: inline-block;
+	float: left;
+	width: 25%;
+}
+
+#new_post {
+	display: block;
+	/*float: left;*/
+	position: relative;
+	top: 100px;
+}
+
+#posts {
+	display: inline-block;
+	padding-left: 20px;
+	position: relative;
+	bottom: 16px;
+	width: 50%;
+}
+
+#footer {
+	clear: both;
+}
