--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,7 @@
-<%= form_for @user do |f| %>
+<%= form_for @post do |f| %>
 <%=f.label "title" %>
 <%=f.text_field :title %>
 <%=f.label "body" %>
 <%=f.text_field :body %>
-#needs submit button
+<%=f.submit %>
 <% end %>
