--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,14 +2,35 @@
 <h2><%= @user.fname %></h2>
 <h2><%= @user.lname %></h2>
 
-<p>In my years, I've seen all sounds of misconception.. When I wake up I like a pound of bacon. Come'on shout it out. But I'm okay just pain me. Will break down what little is left, yeah. Take it very slow. So when you hold onto the past then you. What happened to me I don't understand.. It's what we live for. Rock, It's what we're all about. Hustling deals like Mickey Macoote. Every hit hurts like your kiss. It's not what I said but intentions you've read.. Start off the day with my arteries shaking. She said, you don't even know</p>
+	<div id="about">
+			<h3>About Me</h3>
+			<p>In my years, I've seen all sounds of misconception.. When I wake up I like a pound of bacon. Come'on shout it out. But I'm okay just pain me. Will break down what little is left, yeah. Take it very slow. So when you hold onto the past then you. What happened to me I don't understand.. It's what we live for. Rock, It's what we're all about. Hustling deals like Mickey Macoote. Every hit hurts like your kiss. It's not what I said but intentions you've read.. Start off the day with my arteries shaking. She said, you don't even know</p>
+	</div>
 
-<% @user.posts.each do |b| %>
-<!-- -->
-<%= b.title %>
-<%= b.body %>
-<% end %>
+	<!-- <div id="new_post">
+			<%= form_for Post.new do |f| %>
+			<%=f.label "title" %>
+			<%=f.text_field :title %><br>
+			<%=f.label "body" %>
+			<%=f.text_area :body %>
+			<%=f.submit %>
+			<% end %>
+	</div> -->
 
+	<div id="posts">
+			<h3>My Posts</h3>
+			<% @user.posts.each do |b| %>
+			<br>		
+			<%= b.title %>
+			<%= b.body %>
+			<% end %>
+	</div>
 
-<%= link_to "Edit", edit_user_path(@user) %>
-<%= link_to "Posts", post_path(@user) %>
+	
+
+<!-- <br> -->
+	
+	<div id="footer">
+			<%= link_to "Edit Account Details", edit_user_path(@user) %>
+			<%= link_to "Posts", post_path(@user) %>
+	</div>
