--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,12 @@
+<%= link_to "Users", users_path %>
+<%= link_to "Posts", posts_path %>
+
 <h2><%= @user.username %></h2>
 <h2><%= @user.fname %></h2>
 <h2><%= @user.lname %></h2>
+
+
+<%= link_to("Logout",  logout_path, method: :delete) %>
 
 	<div id="about">
 			<h3>About Me</h3>
