--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,9 @@
-// Place all the styles related to the welcome controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+* {
+	background: #cc33ff;
+	color: #00e600;
+}
+
+a {
+	/*color: #1a1aff;*/
+	color: #ffffff;
+}
