--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @post do |f| %>
 <%=f.label "title" %>
-<%=f.text_field :title %>
+<%=f.text_field :title %><br>
 <%=f.label "body" %>
-<%=f.text_field :body %>
+<%=f.text_area :body %>
 <%=f.submit %>
 <% end %>
