--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,17 +1,22 @@
 
-<%= link_to "#{@post.user.username}", user_path(@post.user) %>
+<%= link_to "#{@post.user.username}", post_path(@post.user) %>
 <%= @post.title %>
 <%= @post.body %>
 
-	<div id="new_post">
-			<%= form_for Post.new do |f| %>
-			<%=f.label "title" %>
-			<%=f.text_field :title %><br>
-			<%=f.label "body" %>
-			<%=f.text_area :body %>
-			<%=f.submit %>
-			<% end %>
-	</div>
+	<%= form_for @post, data: { confirm: 'Are you sure?' }, remote: true do |f| %>
 
-	<%= link_to "Edit Post", edit_post_path %>
-	
+		<%= f.label :title %>
+		<br>
+		<%= f.text_field :title %>
+		<br>
+		<%= f.label :body %>
+		<br>
+		<%= f.text_area :body %>
+		<br>
+		<%= f.submit :update%>
+
+	<% end %>
+
+		<%= link_to "Edit Post", edit_post_path %>
+		
+		<%= link_to "Delete", post_path(@post), method: :delete %>
