--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Comments#edit</h1>
-<p>Find me in app/views/comments/edit.html.erb</p>
+<%= form_for @comment do |f| %>
+<%=f.label "body" %>
+<%=f.text_area :body %>
+<%=f.hidden_field :user_id, value: current_user.id %>
+<%=f.submit %>
+<% end %>
