--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,5 +3,6 @@
 <%=f.text_field :title %><br>
 <%=f.label "body" %>
 <%=f.text_area :body %>
+<%=f.hidden_field :user_id, value: current_user.id %>
 <%=f.submit %>
 <% end %>
